--- a/.storybook/preview.css
+++ b/.storybook/preview.css
@@ -4,3 +4,14 @@ details > summary {
   font-size: 14px;
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
 }
+
+div.topLink {
+  text-align: right;
+  margin-top: -3rem;
+  position: relative;
+  z-index: 1;
+}
+
+div.topLink a {
+  font-size: 12px;
+}
